# futbladaj

./: Cargo.toml  README.md
config/: booking.yml  cli.yml
src/: cli.rs  cli.yml  client.rs  config.rs  main.rs  params.rs  request.rs  string.rs
src/cli/: mod.rs
