[package]
name = "futbladaj"
version = "0.1.0"
authors = ["Daniel José Domingos Serrano <danieljdserrano@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", branch = "master", features = ["yaml"] }
ureq = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_qs = "*"
